# kafka-sigma-engine

./: .claudecodeignore  .gitignore  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
docs/adr/: 0001-kafka-rule-updates-topic-for-rule-delivery.md  0002-python-asyncio-for-rule-engine.md  0003-multiple-asyncio-processes-as-consumer-group.md  0004-elasticsearch-for-alert-storage.md  0005-raw-logs-topic-4-partitions-host-key.md  0006-at-least-once-offset-commit.md  0007-micro-batch-dual-flush-triggers.md  0008-alert-embeds-full-raw-log.md  0009-prometheus-grafana-observability.md  0010-in-memory-sliding-window-for-aggregation-rules.md  0011-typed-json-envelope-for-rule-lifecycle-operations.md  0012-raw-logs-topic-8-partitions-for-kubernetes-scaling.md  0013-kubernetes-full-stack-minikube.md  0014-alert-deduplication-via-elasticsearch-document-id.md  0015-log-generator-http-admin-endpoint-for-runtime-eps.md  0016-log-generator-per-host-state-machine-for-attack-sequences.md  0017-rule-engine-default-replicas-reduced-to-4.md
docs/agents/: domain.md  issue-tracker.md
grafana/dashboards/: sigma_engine.json
k8s/: namespace.yaml
k8s/alert-storage/: deployment.yaml
k8s/kafka/: kafka.yaml  (+1 more)
prometheus/: prometheus.yml
sigma_rules/: cloudtrail_bucket_delete.yml  cloudtrail_iam_user_create.yml  windows_brute_force.yml  windows_explicit_credentials_logon.yml  windows_failed_login.yml  windows_privilege_use.yml  windows_successful_login.yml  windows_suspicious_process.yml
src/: exceptions.py  models.py
tests/: conftest.py
(+46 files in other folders)
