[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-sigma-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.11",
    "elasticsearch[async]>=8,<9",
    "prometheus-client>=0.20",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "types-PyYAML>=6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring the live Docker Compose stack (deselect with -m 'not integration')",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/integration/"]
